infrastructure/flux-operator/overlays/nishir/patch-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: flux-operator
  namespace: flux-system
spec:
  parentRefs:
    - name: flux-operator
      sectionName: https
  hostnames:
    - flux.i.shikanime.studio
